# System-Programming-Project

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.db  INSTALL.md  LICENSE  MANUAL.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-build.yml
db/init/: 001_students.sql
docs/: ci-research.md  demo-script.md  docker-hub.md  docker-requirements.md  project-structre.md  qa-prep.md  week2-smoke-test.md  week3-test-results.md
include/: db_config.hpp  student.hpp  student_repo.hpp  validation.hpp
src/: db_config.cpp  main.cpp  student_repo.cpp  validation.cpp
tests/: test_validation.cpp
